--- a/VaccineC/src/styles.scss
+++ b/VaccineC/src/styles.scss
@@ -144,6 +144,11 @@ html {
   color: white;
 }
 
+.cyan-button {
+  background-color: #00b4ce !important;
+  color: white;
+}
+
 .w-20px {
   width: 20px;
 }
