--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
@@ -37,11 +37,11 @@
 
                         <button id="mat-add-button" 
                                 mat-raised-button
-                                class="mat-button-entry create-button me-2" 
+                                class="mat-button-entry cyan-button me-2" 
                                 matTooltip="Disponíveis do Dia" 
                                 matTooltipPosition="above"
                                 (click)="getAvailableApplications()">
-                                <span class="fa-solid fa-calendar-check w-20px"></span>                            </button>
+                                <span class="fa-solid fa-clock w-20px"></span>                            </button>
 
                         <button mat-raised-button
                                 class="mat-button-entry" 
@@ -53,14 +53,13 @@
                     </div>
                 </div>
 
-                <div id="search-table">
+                <div id="search-table" *ngIf="isTableApplicationVisible">
                   <div class="col-sm-11 search-table-content mat-elevation-z2">
-                    <table mat-table [dataSource]="dataSourceSearch" class="col-sm-12" matSort
-                    matSortDirection="asc">
+                    <table mat-table [dataSource]="dataSourceSearchApplication" class="col-sm-12">
                         
                         <ng-container matColumnDef="color">
                             <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
-                            <mat-cell *matCellDef="let element" id="color-td" style.background-color="{{formatTdColor(element.Authorization.Person.PersonsPhysical.Gender)}}"> 
+                            <mat-cell *matCellDef="let element" id="color-td" style.background-color="{{formatTdColor(element.Person.PersonsPhysical.Gender)}}"> 
                                 
                             </mat-cell>
                         </ng-container>
@@ -68,40 +67,211 @@
                         <ng-container matColumnDef="borrower">
                             <mat-header-cell *matHeaderCellDef style="padding-left: 24px;"> Tomador </mat-header-cell>
                             <mat-cell *matCellDef="let element" style="padding-left: 12px;"> 
-                                <img id="profilePic" src="{{formateProfilePicExhibition(element.Authorization.Person.ProfilePic)}}"/>
+                                <img id="profilePic" src="{{formateProfilePicExhibition(element.Person.ProfilePic)}}"/>
                                 <div style="margin-left:0.5rem;">
-                                    <div>{{element.Authorization.Person.Name}}</div>
-                                    <div class="small-text">{{getPersonAge(element.Authorization.Person.CommemorativeDate)}} anos</div> 
+                                    <div>{{element.Person.Name}}</div>
+                                    <div class="small-text">{{getPersonAge(element.Person.CommemorativeDate)}} anos</div> 
                                 </div>
                             </mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="date">
                             <mat-header-cell *matHeaderCellDef> Data e Hora </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{formatDateExhibition(element.Authorization.Event.StartDate, element.Authorization.Event.StartTime)}}</mat-cell>
+                            <mat-cell *matCellDef="let element"> {{formatDateExhibition(element.Event.StartDate, element.Event.StartTime)}}</mat-cell>
                         </ng-container>
 
                         <ng-container matColumnDef="product">
                             <mat-header-cell *matHeaderCellDef> Produto </mat-header-cell>
-                            <mat-cell *matCellDef="let element"> {{element.Authorization.BudgetProduct.Product.Name}}</mat-cell>
+                            <mat-cell *matCellDef="let element"> {{element.BudgetProduct.Product.Name}}</mat-cell>
                         </ng-container>
 
-                        <mat-header-row *matHeaderRowDef="displayedSearchColumns"></mat-header-row>
-                        <mat-row *matRowDef="let row; columns: displayedSearchColumns;" style="cursor:pointer;" class="hover-element-row"></mat-row>
+                        <ng-container matColumnDef="ID">
+                            <th mat-header-cell hidden *matHeaderCellDef> ID </th>
+                            <td mat-cell hidden *matCellDef="let element"> {{element.ID}} </td>
+                        </ng-container>
+
+                        <mat-header-row *matHeaderRowDef="displayedSearchApplicationColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedSearchApplicationColumns;" style="cursor:pointer;" class="hover-element-row"></mat-row>
 
                       <!-- Row shown when there is no matching data. -->
                       <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
                       </tr>
                     </table>
-
-                    <mat-paginator #paginatorApplication="matPaginator" [pageSizeOptions]="[10, 25, 100]">
-                    </mat-paginator>
                   </div>
                 </div>
+
+                <div id="search-table" *ngIf="!isTableApplicationVisible">
+                    <div class="col-sm-11 search-table-content mat-elevation-z2">
+                      <table mat-table [dataSource]="dataSourceSearchPerson" class="col-sm-12" matSort matSortActive="borrower" matSortDirection="asc">
+                          
+                          <ng-container matColumnDef="color">
+                              <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+                              <mat-cell *matCellDef="let element" id="color-td" style.background-color="{{formatTdColor(element.PersonsPhysical.Gender)}}"> 
+                                  
+                              </mat-cell>
+                          </ng-container>
+  
+                          <ng-container matColumnDef="borrower">
+                              <mat-header-cell *matHeaderCellDef style="padding-left: 24px;" mat-sort-header> Tomador </mat-header-cell>
+                              <mat-cell *matCellDef="let element" style="padding-left: 12px;"> 
+                                  <img id="profilePic" src="{{formateProfilePicExhibition(element.ProfilePic)}}"/>
+                                  <div style="margin-left:0.5rem;">
+                                      <div>{{element.Name}}</div>
+                                      <div class="small-text">{{getPersonAge(element.CommemorativeDate)}} anos</div> 
+                                  </div>
+                              </mat-cell>
+                          </ng-container>
+    
+                          <ng-container matColumnDef="ID">
+                              <th mat-header-cell hidden *matHeaderCellDef> ID </th>
+                              <td mat-cell hidden *matCellDef="let element"> {{element.ID}} </td>
+                          </ng-container>
+  
+                          <mat-header-row *matHeaderRowDef="displayedSearchPersonColumns"></mat-header-row>
+                          <mat-row *matRowDef="let row; columns: displayedSearchPersonColumns;" style="cursor:pointer;" class="hover-element-row"></mat-row>
+  
+                        <!-- Row shown when there is no matching data. -->
+                        <tr class="mat-row" *matNoDataRow>
+                          <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                        </tr>
+                      </table>
+  
+                      <mat-paginator #paginatorPerson="matPaginator" [pageSizeOptions]="[10, 25, 100]">
+                      </mat-paginator>
+                    </div>
+                  </div>
                 </mat-tab>
+
                 <mat-tab label="Aplicação">
-                    <app-aplicacao-cadastro></app-aplicacao-cadastro>
+                    <div class="row first-card">
+                        <div class="col-md-12 offset-none-tablet fullsize-tablet p-0">
+                            <div class="card-resumo-paciente shadow-sm ms-0">
+                                <div class="row ms-0">
+                                    <div class="col-xxl-5 col-sm-5 shadow-sm main-content-resumo-paciente">
+                                        <div class="dados-principais-paciente">
+                                            <img class="mouse-pointer img-paciente" 
+                                                 id="imgPaciente"
+                                                 style="display: block; border-radius: 18%;"
+                                                 src="../../../assets/img/default-profile-pic.png">
+                                            <div class="informacoes-complementares-paciente">
+                                                <span id="nmPessoaPaciente" class="informacao-principal fw-bold">JOHN DOE</span>
+                                                <span id="nmIdadeExtenso" class="informacao-secundaria d-block">25 anos</span>
+                                                <span id="nmCidadeEstado" class="informacao-secundaria">54991223344</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-xxl-7 col-sm-7 secondary-content-resumo-paciente ps-0">
+                                        <div class="w-100">
+                                            <div class="row col-sm-10 offset-sm-1 mb-4">
+                                                <div class="col-sm-8">
+                                                    <span class="informacao-secundaria-auxiliar">Endereço</span>
+                                                    <span class="informacao-principal-auxiliar" id="nmOcupacao">Rua Sinimbu, 1010 - Centro - Caxias do Sul/RS</span>
+                                                </div>
+                                                <div class="col-sm-4">
+                                                    <span class="informacao-secundaria-auxiliar">Atendimentos</span>
+                                                    <span class="informacao-principal-auxiliar" id="nrAtendimento">1º atendimento</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row second-card">
+                        <div class="col-md-12 offset-none-tablet fullsize-tablet p-0">
+                            <div class="card mb-4 shadow-sm right-border-product">
+                                <mat-tab-group>
+                                    <mat-tab label="Aplicações Disponíveis">
+                                        <div id="search-table">
+                                            <mat-table [dataSource]="dataSource" class="col-sm-11">
+                    
+                                                <ng-container matColumnDef="product">
+                                                    <mat-header-cell *matHeaderCellDef> Produto </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element"> {{element.product}} </mat-cell>
+                                                </ng-container>
+                    
+                                                <ng-container matColumnDef="scheduling">
+                                                    <mat-header-cell *matHeaderCellDef> Agendamento </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element"> {{element.scheduling}}
+                                                    </mat-cell>
+                                                </ng-container>
+                    
+                                                <ng-container matColumnDef="date">
+                                                    <mat-header-cell *matHeaderCellDef> Data </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+                                                </ng-container>
+                    
+                                                <ng-container matColumnDef="action">
+                                                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element">
+                                                        <button mat-icon-button 
+                                                                color="primary" 
+                                                                title="Realizar Aplicação"
+                                                                (click)="openAplicationDialog()">
+                                                                <i class="fa-solid fa-syringe"></i>
+                                                        </button>
+                                                    </mat-cell>
+                                                </ng-container>
+                    
+                                                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                                                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                            </mat-table>
+                                        </div>
+                                    </mat-tab>
+                                    <mat-tab label="Histórico">
+                                        <div class="container py-5">
+                                            <div class="main-timeline-2">
+                                                <div class="timeline-2 left-2">
+                                                    <div class="card">
+                                                        <div class="card-body p-4">
+                                                            <h4 class="fw-bold mb-2 titulo-historico">VACINA BCG</h4>
+                                                            <p class="text-muted mb-4 horario-historico">
+                                                                <i class="fas fa-calendar me-1" aria-hidden="true"></i>
+                                                                 10/01/2022 10:32
+                                                            </p>
+                                                            <p class="mb-0 texto-historico"> DOSE 1 </p>
+                                                            <p class="mb-0 texto-historico"> Aplicador Fulano </p>
+                                                            <p title="Informações do Lote" 
+                                                               class="mb-0 texto-historico"
+                                                               style="float:right;">
+                                                               <a (click)="openBatchDialog()">
+                                                                <i class="fa-solid fa-box-open me-1"></i>
+                                                                F1G2H3
+                                                               </a>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="timeline-2 right-2">
+                                                    <div class="card">
+                                                        <div class="card-body p-4">
+                                                            <h4 class="fw-bold mb-2 titulo-historico">VACINA TETRAVALENTE</h4>
+                                                            <p class="text-muted mb-4 horario-historico">
+                                                                <i class="fas fa-calendar me-1" aria-hidden="true"></i>
+                                                                15/05/2022 14:41
+                                                            </p>
+                                                            <p class="mb-0 texto-historico"> DOSE 1  </p>
+                                                            <p class="mb-0 texto-historico">Aplicador Ciclano</p>
+                                                            <p title="Informações do Lote" 
+                                                               class="mb-0 texto-historico"
+                                                               style="float:right;">
+                                                               <a (click)="openBatchDialog()">
+                                                                <i class="fa-solid fa-box-open me-1"></i>
+                                                                A1B2C3
+                                                               </a>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </mat-tab>
+                                </mat-tab-group>
+                            </div>
+                        </div>
+                    </div>
                 </mat-tab>
             </mat-tab-group>
         </app-container>
