--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
@@ -237,3 +237,246 @@ form {
   height: 96px !important;
   border-left: 1px solid rgba(231, 234, 243, .7) !important;
 }
+
+.card-resumo-paciente {
+  min-height: 12rem;
+  margin-bottom: 1rem;
+  width: 100%;
+  margin-left: 11px;
+  border-radius: 15px;
+  border: 1px solid #e7e7e7;
+  border-right: 0.25rem #5099dd solid;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.main-content-resumo-paciente {
+  display: flex;
+  height: 100%;
+  border-radius: 15px;
+  padding: 1.5rem;
+  min-height: 12rem;
+  color: #f3f3f3;
+  background: rgb(49, 122, 190);
+  background: linear-gradient(0deg, rgba(49, 122, 190, 1) 0%, rgba(80, 153, 221, 1) 100%);
+}
+
+.dados-principais-paciente {
+  display: flex;
+  align-items: center;
+}
+
+.img-paciente {
+  margin-right: 2rem;
+  height: 90px;
+  width: 90px;
+}
+
+.informacao-secundaria {
+  font-size: 11px;
+}
+
+.informacoes-complementares-paciente {
+  display: flex;
+  flex-direction: column;
+}
+
+.secondary-content-resumo-paciente {
+  display: flex;
+  color: #9da4b0;
+  align-items: center;
+}
+
+.informacao-secundaria-auxiliar {
+  display: block;
+  font-size: 10px;
+}
+
+.informacao-principal-auxiliar {
+  color: #6f7c91;
+  font-size: 12px;
+  border-bottom: 1px solid #5099dd;
+  padding-bottom: 5px;
+  line-height: 28px;
+}
+
+.right-border-product {
+  border-right: 0.25rem #5099dd solid;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.first-card,
+.second-card {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+
+#search-table {
+  display: flex;
+  justify-content: center;
+  overflow-x: initial;
+  margin: 0.5rem;
+  border: none;
+  margin-bottom: 3rem;
+}
+
+:host ::ng-deep .mat-table {
+  border-radius: 0.75rem;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 10%), 0px 3px 4px 0px rgb(0 0 0 / 10%), 0px 1px 8px 0px rgb(0 0 0 / 10%);
+}
+
+:host ::ng-deep .mat-form-field-wrapper {
+  padding: 0px;
+}
+
+/* The actual timeline (the vertical ruler) */
+.main-timeline-2 {
+  position: relative;
+}
+
+/* The actual timeline (the vertical ruler) */
+.main-timeline-2::after {
+  content: '';
+  position: absolute;
+  width: 3px;
+  background-color: #4895ef;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.timeline-2 {
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.timeline-2::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -11px;
+  background-color: #4895ef;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left-2 {
+  padding: 0px 40px 20px 0px;
+  left: 0;
+}
+
+/* Place the container to the right */
+.right-2 {
+  padding: 0px 0px 20px 40px;
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left-2::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right-2::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right-2::after {
+  left: -14px;
+}
+
+.titulo-historico {
+  font-size: 14px;
+}
+
+.horario-historico,
+.texto-historico {
+  font-size: 12px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+
+  /* Place the timelime to the left */
+  .main-timeline-2::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .timeline-2 {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .timeline-2::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left-2::after,
+  .right-2::after {
+    left: 18px;
+  }
+
+  .left-2::before {
+    right: auto;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right-2 {
+    left: 0%;
+  }
+}
+
+@media (max-width: 1366px) {
+
+  .main-content-resumo-paciente,
+  .card-resumo-paciente {
+    min-height: 10rem;
+  }
+
+  .img-paciente {
+    height: 90px;
+    width: 90px;
+  }
+}
+
+a {
+  color: #5099dd !important;
+}
+
+a:hover {
+  color: #5099dd !important;
+  text-decoration: underline !important;
+  cursor: pointer;
+}
