--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.scss
@@ -270,6 +270,7 @@ form {
   margin-right: 2rem;
   height: 90px;
   width: 90px;
+  box-shadow: 0 0.125rem 0.25rem 0 rgb(58 59 69 / 20%) !important
 }
 
 .informacao-secundaria {
