--- a/VaccineC/src/app/styles/css/style-global.css
+++ b/VaccineC/src/app/styles/css/style-global.css
@@ -5005,6 +5005,7 @@ input[type="button"].btn-block {
   background-clip: border-box;
   border: 1px solid #e3e6f0;
   border-radius: 0.35rem;
+  box-shadow: rgb(60 64 67 / 30%) 0px 1px 2px 0px, rgb(60 64 67 / 15%) 0px 1px 3px 1px;
 }
 
 .card>hr {
