--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
@@ -196,44 +196,57 @@
                                         <div id="search-table" style="margin-bottom:3rem;">
                                             <div class="col-sm-11 search-table-content mat-elevation-z2">
                                              
-                                            <mat-table [dataSource]="dataSource" class="col-sm-12">
+                                            <table mat-table [dataSource]="dataSourceApplication" class="col-sm-12">
                     
                                                 <ng-container matColumnDef="product">
                                                     <mat-header-cell *matHeaderCellDef> Produto </mat-header-cell>
-                                                    <mat-cell *matCellDef="let element"> {{element.product}} </mat-cell>
-                                                </ng-container>
-                    
-                                                <ng-container matColumnDef="scheduling">
-                                                    <mat-header-cell *matHeaderCellDef> Agendamento </mat-header-cell>
-                                                    <mat-cell *matCellDef="let element"> {{element.scheduling}}
+                                                    <mat-cell *matCellDef="let element"> 
+                                                            <div matTooltip="Orçamento nº {{element.BudgetNumber}}
+                                                                            Responsável {{element.PersonBudget}}
+                                                                            Total R${{element.TotalBudgetAmount.toLocaleString('pt-br', { style: 'currency', currency: 'BRL' })}}"
+                                                                            matTooltipPosition="left">
+                                                                <div>{{element.ProductName}}</div>
+                                                                <div class="small-text">{{formatDoseType(element.DoseType)}}</div>
+                                                            </div>
                                                     </mat-cell>
                                                 </ng-container>
-                    
+
+                                                <ng-container matColumnDef="scheduling">
+                                                    <mat-header-cell *matHeaderCellDef> Autorização </mat-header-cell>
+                                                    <mat-cell *matCellDef="let element"> 
+                                                        <div>
+                                                            <div>{{element.AuthorizationNumber}}</div>
+                                                            <div class="small-text">{{formatTypeOfService(element.TypeOfService)}}</div>
+                                                        </div>
+                                                        
+                                                    </mat-cell>
+                                                </ng-container>
+                
                                                 <ng-container matColumnDef="date">
                                                     <mat-header-cell *matHeaderCellDef> Data </mat-header-cell>
-                                                    <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+                                                    <mat-cell *matCellDef="let element"> {{formatDateExhibition(element.StartDate, element.StartTime)}} </mat-cell>
                                                 </ng-container>
                     
                                                 <ng-container matColumnDef="action">
                                                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                                                     <mat-cell *matCellDef="let element">
-                                                        <button mat-icon-button 
-                                                                color="primary" 
-                                                                title="Realizar Aplicação"
-                                                                (click)="openAplicationDialog()">
-                                                                <i class="fa-solid fa-syringe"></i>
-                                                        </button>
+                                                        <i class="fa-solid fa-syringe vaccine-icon"></i>
                                                     </mat-cell>
                                                 </ng-container>
-                    
-                                                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                                                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-                                            </mat-table>
+
+                                                <!-- Row shown when there is no matching data. -->
+                                                <tr class="mat-row" *matNoDataRow>
+                                                    <td class="mat-cell" colspan="4">Nenhum registro encontrado.</td>
+                                                </tr>
+
+                                                <mat-header-row *matHeaderRowDef="displayedApplicationColumns"></mat-header-row>
+                                                <mat-row class="hover-element-row" style="cursor:pointer;" (dblclick)="openAplicationDialog()" *matRowDef="let row; columns: displayedApplicationColumns;"></mat-row>
+                                            </table>
                                             </div>
                                         </div>
                                     </mat-tab>
                                     <mat-tab label="Histórico">
-                                        <div class="container py-5">
+                                        <div class="container py-5" style="padding-top: 0.5rem !important; padding-bottom: 0.5rem !important;">
                                             <div class="main-timeline-2">
                                                 <div class="timeline-2  {{indexOfelement % 2 == 0 ? 'left' : 'right'}}-2" *ngFor="let element of applicationsHistory; let indexOfelement=index;">
                                                     <div class="card">
@@ -250,27 +263,27 @@
                                                             </p>
                                                             
                                                             <p class="mb-0 text-muted horario-historico">
-                                                                <i class="fas fa-calendar me-1" aria-hidden="true"></i>
-                                                                 <span title="Data de Aplicação">{{element.ApplicationDate | date: 'dd/MM/yyyy H:mm'}}</span>
-                                                            </p>
-                                                            <p class="mb-0 text-muted horario-historico">
-                                                                <i class="fas fa-user-nurse me-1" aria-hidden="true"></i>
+                                                                <i class="fas fa-user-nurse me-1 history-icon" aria-hidden="true"></i>
                                                                 <span title="Usuário Aplicador">Aplicador {{element.UserPersonName}}</span>
                                                             </p>
                                                             <p class="text-muted mb-4 horario-historico">
-                                                                <i class="fas fa-comments-dollar me-1" aria-hidden="true"></i>
+                                                                <i class="fas fa-comments-dollar me-1 history-icon" aria-hidden="true"></i>
                                                                 <span title="Informações do Orçamento">Orçamento nº {{element.BudgetNumber}} - {{element.PersonResponsible}}</span>
                                                             </p>
                                                           
-                                                            <p title="Informações do Lote" 
-                                                               class="mb-0 texto-historico"
+                                                            <p class="mb-0 texto-historico"
                                                                style="float:right;">
-                                                               <a (click)="openBatchDialog(element.ProductSummaryBatchId)">
+                                                               <a (click)="openBatchDialog(element.ProductSummaryBatchId)" matTooltip="Informações do Lote" matTooltipPosition="above">
                                                                 <i class="fa-solid fa-box-open me-1"></i>
                                                                 {{element.Batch}}
                                                                </a>
                                                             </p>
                                                         </div>
+                                                    </div>
+                                                    <div class="bolota {{indexOfelement % 2 == 0 ? 'bolota-left' : 'bolota-right'}}" 
+                                                         matTooltip="{{element.ApplicationDate | date: 'dd/MM/yyyy H:mm'}}" 
+                                                         [matTooltipPosition]="positionTooltip(indexOfelement)">
+                                                        <span class="dt-historico">{{formatDayTimelineDate(element.ApplicationDate)}}<br><b>{{formatMonthTimelineDate(element.ApplicationDate)}}</b>{{formatYearTimelineDate(element.ApplicationDate)}}</span>
                                                     </div>
                                                 </div>
                                             </div>
