--- a/VaccineC/src/app/pages/aplicacao/aplication-dialog.html
+++ b/VaccineC/src/app/pages/aplicacao/aplication-dialog.html
@@ -61,6 +61,6 @@
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary">Cancelar</button>
-    <button mat-flat-button cdkFocusInitial class="create-button">Salvar</button>
+    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
+    <button mat-flat-button class="create-button">Salvar</button>
 </mat-dialog-actions>
