--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -192,7 +192,8 @@
                            [matDatepicker]="picker" 
                            #CommemorativeDateInput 
                            [(ngModel)]="CommemorativeDate"
-                           formControlName="CommemorativeDate">
+                           formControlName="CommemorativeDate"
+                           [max]="today">
                            
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                     <mat-datepicker #picker></mat-datepicker>
